feat: 维护结构体字段布局的全局静态表
- 新增 STRUCT_LAYOUTS静态字段，用于存储结构体字段布局
- 添加 registerStructLayout 方法，注册结构体字段布局
- 实现 lookupFieldIndex 和 getStructLayout 方法，用于查询字段布局
- 优化跨模块常量导入和查询逻辑
- 重构部分代码，提高可读性和维护性